--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
     height: 400px;
     border-radius: 3%;
     border: solid black 2px;
-    padding: 30px;
+    padding: 16px;
     text-align: center;
 
 }
@@ -19,20 +19,12 @@ body {
 #frm1 {
     border: solid tan 1px;
     padding: 10px;
-    margin-top: 50px;
+    margin-top: 16px;
     text-align: left;
 }
 
 input {
-    width: 70px;
+    width: auto;
     text-align: right;
-    font-weight: bold;
-    
-}
-
-#answer-wrapper {
-    display: flex;
-    flex-direction: row;
-    text-align: left;
-    font-weight: bold;
+    font-weight: bold;    
 }
