--- a/style.css
+++ b/style.css
@@ -30,6 +30,11 @@
 
 body {
     background-color: var(--body-bg-color);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
 }
 
 #calculator-panel {
